[project]
name = "dbuv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.2",
    "peewee>=4.0.4",
]

[project.scripts]
dbuv = "dbuv:cli"

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"
